// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard render SnackbarContent and could be closed correctly 1`] = `
Array [
  Object {
    "type": "APPLICATION_DRAWER_TOGGLE",
  },
  Object {
    "type": "APPLICATION_LAUNCH_BAR_TOGGLE",
  },
  Object {
    "error": false,
    "payload": Object {
      "callback": [Function],
      "errorCallback": [Function],
    },
    "type": "REDUX_OPENFIN::MINIMIZE",
  },
  Object {
    "type": "APPLICATION_TOGGLE_WINDOW_STATE",
  },
  Object {
    "error": false,
    "payload": Object {
      "callback": [Function],
      "errorCallback": [Function],
      "force": false,
    },
    "type": "REDUX_OPENFIN::CLOSE",
  },
  Object {
    "payload": Object {
      "open": false,
    },
    "type": "APPLICATION_SET_SNACKBAR_STATUS",
  },
]
`;

exports[`Dashboard render in normal state correctly by default 1`] = `
Array [
  Object {
    "type": "APPLICATION_DRAWER_TOGGLE",
  },
  Object {
    "type": "APPLICATION_LAUNCH_BAR_TOGGLE",
  },
  Object {
    "error": false,
    "payload": Object {
      "callback": [Function],
      "errorCallback": [Function],
    },
    "type": "REDUX_OPENFIN::MINIMIZE",
  },
  Object {
    "type": "APPLICATION_TOGGLE_WINDOW_STATE",
  },
  Object {
    "error": false,
    "payload": Object {
      "callback": [Function],
      "errorCallback": [Function],
      "force": false,
    },
    "type": "REDUX_OPENFIN::CLOSE",
  },
  Object {
    "payload": Object {
      "event": undefined,
      "reason": undefined,
    },
    "type": "APPLICATION_CLOSE_SNACKBAR",
  },
  Object {
    "type": "APPLICATION_PROCESS_SNACKBAR_QUEUE",
  },
]
`;
